[package]
name = "shproto-rs"
version = "0.1.0"
edition = "2021"
authors = ["Worm Zemlyanoi <me@ypr.pw>"]
description = "This code is a Rust implementation of a Simple Hexadecimal Protocol (Shproto) packet format."
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"